# youtube-downloader

./: .gitignore  README.md  pyproject.toml  railway.toml
docker/: .dockerignore  Dockerfile
src/: main.py
src/config/: settings.py
src/share/: router.py
src/youtube/: router.py  service.py
